# zed

./: Cargo.toml
.cargo/: config.toml
.plan/: 01_auto_prompt.md  02_e2e_helloworld_test.md
.plan/e2e/: 01_helloworld_core.md
.plans/: 02_e2e_helloworld_test.md
.plans/e2e/: 02_helloworld_bugfix_release.md
assets/settings/: default.json
crates/acp_thread/src/: acp_thread.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_panel.rs  agent_ui.rs  conversation_view.rs
crates/agent_ui/src/auto_prompt/: client.rs  config.rs  context.rs  mod.rs
crates/anthropic/src/: anthropic.rs  completion.rs
crates/assistant/src/: assistant_panel.rs  assistant_settings.rs  completion_provider.rs
crates/assistant2/src/: completion_provider.rs
crates/auto_prompt/: Cargo.toml  DEBUG_LOGGING.md  README.md
crates/auto_prompt/src/: auto_prompt.rs  config.rs  context.rs
crates/auto_prompt/tests/: context_helpers_test.rs
crates/bedrock/src/: models.rs
crates/client/src/: client.rs
crates/collab/src/: rpc.rs
crates/google_ai/src/: google_ai.rs
crates/language_model_core/src/: language_model_core.rs
crates/language_models_cloud/src/: language_models_cloud.rs
crates/open_ai/src/: open_ai.rs
crates/open_router/src/: open_router.rs
crates/prompt_store/: default_auto_prompt_system_prompt.txt
crates/prompt_store/src/: prompt_store.rs
crates/worktree/src/: worktree.rs
crates/zed/src/: visual_test_runner.rs
docs/src/: SUMMARY.md
docs/src/development/: windows-notes.md
msvc_stl_shim/: msvc_stl_shim.lib  shim.cpp
script/: test-auto-prompt-e2e
(+13 files in other folders)
