[package]
name = "auto_prompt"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/auto_prompt.rs"
doctest = false

[dependencies]
acp_thread.workspace = true
agent-client-protocol.workspace = true
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
gpui.workspace = true
indoc.workspace = true
language_model.workspace = true
log.workspace = true
paths.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true